--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -45,9 +45,12 @@
                     background: #00aced;
                 }
                 a:nth-child(2){
-                    background: #0077b5;
+                    background: #c4302b;
                 }
                 a:nth-child(3){
+                    background: #0077b5;
+                }
+                a:nth-child(4){
                     background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
                 }
             }
