--- a/styles/experience.scss
+++ b/styles/experience.scss
@@ -8,7 +8,7 @@
     .experience-cards-citation{
         color: $gray-white;
     }
-    .form-web{
+    .form-web span{
         color: $white;
     }
 }
