--- a/styles/skillest.scss
+++ b/styles/skillest.scss
@@ -141,37 +141,48 @@
                         }
                     }
                     ion-icon:nth-child(4){
-                        color: #f0db4f;
+                        color: #efd81d;
                         transition: .3s ease;
                         &:hover{
-                            background: rgba(#f0db4f, $alpha: 0.2);
+                            background: rgba(#efd81d, $alpha: 0.2);
                             cursor: pointer;
                         }
                     }
-                    ion-icon:nth-child(5){
-                        color: #61dafb;
-                        transition: .3s ease;
-                        &:hover{
-                            background: rgba(#61dafb, $alpha: 0.2);
-                            cursor: pointer;
-                        }
-                    }
-                    span:nth-child(6){
+                    span:nth-child(5){
                         img{
-                            padding: 1rem;
+                            padding: 0.6rem;
+                        }
+                        color: #3178c6;
+                        transition: .3s ease;
+                        &:hover{
+                            background: rgba(#3178c6, $alpha: 0.2);
+                            cursor: pointer;
+                        }
+                    }
+                    ion-icon:nth-child(6){
+                        color: #dd0031;
+                        transition: .3s ease;
+                        &:hover{
+                            background: rgba(#dd0031, $alpha: 0.2);
+                            cursor: pointer;
+                        }
+                    }
+                    ion-icon:nth-child(7){
+                        color: #5ed3f3;
+                        transition: .3s ease;
+                        &:hover{
+                            background: rgba(#5ed3f3, $alpha: 0.2);
+                            cursor: pointer;
+                        }
+                    }
+                    span:nth-child(8){
+                        img{
+                            padding: 0.6rem;
                         }
                         color: #ff3c00;
                         transition: .3s ease;
                         &:hover{
                             background: rgba(#ff3c00, $alpha: 0.2);
-                            cursor: pointer;
-                        }
-                    }
-                    ion-icon:nth-child(7){
-                        color: #a4c439;
-                        transition: .3s ease;
-                        &:hover{
-                            background: rgba(#a4c439, $alpha: 0.2);
                             cursor: pointer;
                         }
                     }
