--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -1,155 +1,166 @@
-.navigation{
-    display: grid;
-    grid-template-columns: repeat(minmax(9, auto), 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
-    &-logo{
-        grid-area: 1 / 3 / 2 / 4;
-        font-family: 'Grey Qo', cursive;
-        font-size: 35px;
-        color: $gray-dark;
-    }
-    &-logo.active-mode{
-        color: $white;
-    }
-    &-page{
-        display: flex;
-        grid-area: 1 / 5 / 2 / 7;
-        li{
-            padding: 1rem;
-            transition: all .3s ease;
-                &:hover{
-                    transform: translateX(2px);
-                    color: $primary;
-                    cursor: pointer;
-                    
-            }
-        }
-    }
-    &-socials{
-        display: flex;
-        grid-area: 1 / 7 / 2 / 9;
-        li{
-            padding: 1rem;
-            ion-icon{
-                font-size: 20px;
-                transition: all .3s ease;
-                &:hover{
-                    transform: translateY(2px) scaleX(1.1);;
-                    color: $primary;
-                    cursor: pointer;
-                }
-            }
-        }
-    }
-    &-burger{
-        margin: 1rem;
-        background: rgba($gray, $alpha: 0.3);
-        height: 50px;
-        width: 50px;
-        border-radius: 50%;
-        border: 2px solid $gray;
+.navigation {
+  display: grid;
+  grid-template-columns: repeat(minmax(9, auto), 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  transition: 0.3s;
+  z-index: 2;
+  background: $white;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.37);
+  &-logo {
+    grid-area: 1 / 3 / 2 / 4;
+    font-family: "Grey Qo", cursive;
+    font-size: 35px;
+    color: $gray-dark;
+  }
+  &-logo.active-mode {
+    color: $white;
+  }
+  &-page {
+    display: flex;
+    grid-area: 1 / 5 / 2 / 7;
+    li {
+      padding: 1rem;
+      transition: all 0.3s ease;
+      &:hover {
+        transform: translateX(2px);
+        color: $primary;
         cursor: pointer;
-        display: none;
-        justify-content: center;
-        align-items: center;
-        display: none;
-        &-line{
-            position: relative;
-            width: 25px;
-            height: 2.5px;
-            background: $gray;
-            &::before, 
-            &::after {
-                content: "";
-                width: 25px;
-                height: 2.5px;
-                background: $gray;
-                position: absolute;
-                transition: all 0.2s;
-            }
-            &::before {
-                transform: translateY(-7px);
-            }
-            &::after {
-                transform: translateY(7px);
-            }
+      }
+    }
+  }
+  &-socials {
+    display: flex;
+    grid-area: 1 / 7 / 2 / 9;
+    li {
+      padding: 1rem;
+      ion-icon {
+        font-size: 20px;
+        transition: all 0.3s ease;
+        &:hover {
+          transform: translateY(2px) scaleX(1.1);
+          color: $primary;
+          cursor: pointer;
         }
+      }
     }
-    &-burger.active &-burger-line {
-        background-color: transparent;
+  }
+  &-burger {
+    margin: 1rem;
+    background: rgba($gray, $alpha: 0.3);
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: 2px solid $gray;
+    cursor: pointer;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    &-line {
+      position: relative;
+      width: 25px;
+      height: 2.5px;
+      background: $gray;
+      &::before,
+      &::after {
+        content: "";
+        width: 25px;
+        height: 2.5px;
+        background: $gray;
+        position: absolute;
+        transition: all 0.2s;
+      }
+      &::before {
+        transform: translateY(-7px);
+      }
+      &::after {
+        transform: translateY(7px);
+      }
     }
-    &-burger.active &-burger-line::before {
-        transform: translateY(0px) rotate(135deg);
-    }
-    &-burger.active &-burger-line::after {
-        transform: translateY(0px) rotate(-135deg);
-    }
-    &-menu{
-        display: none;
-    }
+  }
+  &-burger.active &-burger-line {
+    background-color: transparent;
+  }
+  &-burger.active &-burger-line::before {
+    transform: translateY(0px) rotate(135deg);
+  }
+  &-burger.active &-burger-line::after {
+    transform: translateY(0px) rotate(-135deg);
+  }
+  &-menu {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 1120px) {
-    .navigation{
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        &-page{
-            display: none;
-        }
-        &-socials{
-            display: none;
-        }
-        &-burger{
-            display: flex;
-        }
-        &-menu{
-            display: flex;
-            position: absolute;
-            width: 70%;
-            min-height: 100vh;
-            display: flex;
-            justify-items: center;
-            align-items: center;
-            flex-direction: column;
-            background: $white;
-            border: 2px solid transparent;
-            border-right-color: $gray;
-            border-bottom-color: $gray;
-            top: 0;
-            left: 0;
-            transform: translateX(-100%);
-            z-index: 2;
-            transition: transform .5s cubic-bezier(0.32, 0.52, 1, 0.82);
-            li{
-                padding: 0.75rem;
-                transition: all .3s ease;
-                ion-icon{
-                    font-size: 25px;
-                    &:hover{
-                        color: $primary;
-                        cursor: pointer;
-                    }
-                }
-                &:hover{
-                    transform: translateX(3px);
-                    color: $primary;
-                }
-            }
-        }
-        &-menu.active-mode{
-            background: $gray-dark;
-        }
-        &-menu.active {
-            transform: translateX(0)
-        }
-        &-logo{
-            margin: 1rem;
-        }
-        &-logo.active-mode{
-            color: $white;
-        }
+  .navigation {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    &-page {
+      display: none;
     }
+    &-socials {
+      display: none;
+    }
+    &-burger {
+      display: flex;
+    }
+    &-menu {
+      display: flex;
+      position: absolute;
+      width: 70%;
+      min-height: 100vh;
+      display: flex;
+      justify-items: center;
+      align-items: center;
+      flex-direction: column;
+      background: $white;
+      border: 2px solid transparent;
+      border-right-color: $gray;
+      border-bottom-color: $gray;
+      top: 0;
+      left: 0;
+      transform: translateX(-100%);
+      z-index: 2;
+      transition: transform 0.5s cubic-bezier(0.32, 0.52, 1, 0.82);
+      li {
+        padding: 0.75rem;
+        transition: all 0.3s ease;
+        ion-icon {
+          font-size: 25px;
+          &:hover {
+            color: $primary;
+            cursor: pointer;
+          }
+        }
+        &:hover {
+          transform: translateX(3px);
+          color: $primary;
+        }
+      }
+    }
+    &-menu.active-mode {
+      background: $gray-dark;
+    }
+    &-menu.active {
+      transform: translateX(0);
+    }
+    &-logo {
+      margin: 1rem;
+    }
+    &-logo.active-mode {
+      color: $white;
+    }
+  }
+}
+
+.navigation.fixed {
+  transform: translateY(-100%);
 }
