ajout de la chaine twitch et quelaue modif

--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -24,6 +24,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                flex-wrap: wrap;
                 a{
                     display: flex;
                     justify-content: center;
@@ -45,12 +46,15 @@
                     background: #00aced;
                 }
                 a:nth-child(2){
-                    background: #c4302b;
-                }
-                a:nth-child(3){
                     background: #0077b5;
                 }
+                a:nth-child(3){
+                    background: #c4302b;
+                }
                 a:nth-child(4){
+                    background: #9147ff;
+                }
+                a:nth-child(5){
                     background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
                 }
             }
