--- a/styles/experience.scss
+++ b/styles/experience.scss
@@ -79,7 +79,7 @@
             width: 100%;
             &-card.active{
                 background: $gray-dark;
-                box-shadow: 0 2px 10px rgba($info, $alpha: 0.1);
+                box-shadow: 0 2px 10px rgba($white, $alpha: 0.5);
             }
             &-card{
                 display: flex;
