--- a/styles/other.scss
+++ b/styles/other.scss
@@ -1,185 +1,203 @@
-.other.active{
-    h1{
-        color: $purple; 
+.other.active {
+  h1 {
+    color: $purple;
+  }
+  h2 {
+    color: $light;
+  }
+  .oc-cert {
+    span {
+      color: $white;
     }
-    h2{
-        color: $light;    
-    }
-    .oc-cert{
-        span{
-            color: $white;
-        }
-    }
+  }
 }
-.other{
+.other {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  min-height: 100vh;
+  margin-bottom: 5rem;
+  &-container {
+    width: 70%;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
-    min-height: 100vh;
-    margin-bottom: 5rem;
-    &-container{
-        width: 70%;
+    align-items: center;
+    flex-direction: column;
+    margin: 1rem;
+    h1 {
+      text-align: center;
+      color: $gray-dark;
+      font-family: "Ubuntu";
+      font-size: 35px;
+      font-weight: 500;
+    }
+    h2 {
+      text-align: center;
+      color: $default;
+      font-family: "Roboto";
+      font-weight: 500;
+      i {
+        font-size: 18px;
+      }
+    }
+    &-certification {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      h1 {
+        margin-bottom: 2rem;
+      }
+      h2 {
+        margin-bottom: 3rem;
+      }
+      .oc-cert {
+        position: relative;
+        height: 300px;
+        width: calc(300px * 1.7793594306);
+        margin-bottom: 1.5rem;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        margin: 1rem;
-        h1{
-            text-align: center;
-            color: $gray-dark;
-            font-family: 'Ubuntu';
-            font-size: 35px;
-            font-weight: 500;
+        img {
+          height: 100%;
+          width: 100%;
+          transition: opacity 0.3s ease;
+          border-radius: 10px;
         }
-        h2{
-            text-align: center;  
-            color: $default; 
-            font-family: 'Roboto';
-            font-weight: 500;
-            i{
-                font-size: 18px;
-            }
+        span {
+          position: absolute;
+          transform: translateY(150px);
+          color: $gray-dark;
+          font-weight: bold;
+          text-align: center;
+          opacity: 0;
+          font-size: 20px;
+          transition: 0.3s;
         }
-        &-certification{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            h1{
-                margin-bottom: 2rem;
-            }
-            h2{
-                margin-bottom: 3rem;
-            }
-            .oc-cert{
-                position: relative;
-                height: 300px;
-                width: calc(300px * 1.7793594306);
-                margin-bottom: 1.5rem;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-                img{
-                    height: 100%;
-                    width: 100%;
-                    transition: opacity .3s ease;
-                    border-radius: 10px;
-                }
-                span{
-                    position: absolute;
-                    transform: translateY(150px);
-                    color: $gray-dark;
-                    font-weight: bold;
-                    text-align: center;
-                    opacity: 0;
-                    font-size: 20px;
-                    transition: .3s;
-                }
-                &:hover img{
-                    opacity: 0.08;
-                }
-            }
-            a:hover span{
-                transform: translateY(0px);
-                opacity: 1;
-            }
+        &:hover img {
+          opacity: 0.08;
         }
-        &-contact{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            h1{
-                margin-bottom: 1.5rem;
-            }
-            h2{
-                margin-bottom: 1.5rem;
-            }
-            div{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                a{
-                    button{
-                        border-radius: 10px;
-                        outline: none;
-                        padding: 1rem 1.5rem;
-                        border: 2px solid $indigo;
-                        background: $white;
-                        color: $indigo;
-                        font-weight: bold;
-                        cursor: pointer;
-                        &:hover{
-                            background: rgba($color: $indigo, $alpha: .05);
-                        }
-                    }
-                }
-            }
-        }
-        &-cv{
-            position: relative;
-            width: 100%;
-            padding: 0.5rem;
-            margin: 1rem;
-            text-align: center;
-            color: $white;
-            background: $primary;
-            transition: transform .3s ease;
-            &:hover{
-                transform: translateY(5px);
-            }
-            &::before{
-                content: '•';
-                position: absolute;
-                color: $white;
-                font-size: 20px;
-                top: 5px;
-                left: 5px;
-                transition: transform .3s ease;
-            }
-            &:hover::before{
-                -webkit-animation: hover_cv .3s infinite;
-                        animation: hover_cv .3s infinite;
-            }
-            @-webkit-keyframes hover_cv {
-                0%{
-                    transform: translateY(0);
-                }
-                50%{
-                    transform: translateY(-10px);
-                }
-                100%{
-                    transform: translateY(10px);
-                }
-            }
-            @keyframes hover_cv {
-                0%{
-                    transform: translateY(0);
-                }
-                50%{
-                    transform: translateY(-10px);
-                }
-                100%{
-                    transform: translateY(10px);
-                }
-            }
-        }
+      }
+      a:hover span {
+        transform: translateY(0px);
+        opacity: 1;
+      }
     }
+    &-contact {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      h1 {
+        margin-bottom: 1.5rem;
+      }
+      h2 {
+        margin-bottom: 1.5rem;
+      }
+      div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 2rem;
+        a {
+          button {
+            border-radius: 10px;
+            outline: none;
+            padding: 1rem 1.5rem;
+            border: 2px solid $indigo;
+            background: $white;
+            color: $indigo;
+            font-weight: bold;
+            cursor: pointer;
+            &:hover {
+              background: rgba($color: $indigo, $alpha: 0.05);
+            }
+          }
+        }
+      }
+      .other-freelance {
+        a {
+          width: 53px;
+          height: 53px;
+          margin: 0 1rem;
+          img {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+        }
+        a:first-child{
+            width: 60px;
+            height: 60px;
+        }
+      }
+    }
+    &-cv {
+      position: relative;
+      width: 100%;
+      padding: 0.5rem;
+      margin: 1rem;
+      text-align: center;
+      color: $white;
+      background: $primary;
+      transition: transform 0.3s ease;
+      &:hover {
+        transform: translateY(5px);
+      }
+      &::before {
+        content: "•";
+        position: absolute;
+        color: $white;
+        font-size: 20px;
+        top: 5px;
+        left: 5px;
+        transition: transform 0.3s ease;
+      }
+      &:hover::before {
+        -webkit-animation: hover_cv 0.3s infinite;
+        animation: hover_cv 0.3s infinite;
+      }
+      @-webkit-keyframes hover_cv {
+        0% {
+          transform: translateY(0);
+        }
+        50% {
+          transform: translateY(-10px);
+        }
+        100% {
+          transform: translateY(10px);
+        }
+      }
+      @keyframes hover_cv {
+        0% {
+          transform: translateY(0);
+        }
+        50% {
+          transform: translateY(-10px);
+        }
+        100% {
+          transform: translateY(10px);
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 650px) {
-    .other{
-        &-container{
-            width: 90%;
-        }
-        .oc-cert{
-            height: calc(100% / 1.7793594306);
-            width: 100%;
-            img{
-                height: 100%;
-                width: 100%;
-            }
-        }
+  .other {
+    &-container {
+      width: 90%;
     }
+    .oc-cert {
+      height: calc(100% / 1.7793594306);
+      width: 100%;
+      img {
+        height: 100%;
+        width: 100%;
+      }
+    }
+  }
 }
