ajout des remerciments

--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -68,3 +68,13 @@
             }
     }
 }
+.thanks{
+    width: 100%;
+    padding: 0.5rem 0;
+    margin: 0.5rem 0;
+    text-align: center;
+    font-size: 18px;
+    a{
+        color: $purple;
+    }
+}
