--- a/styles/experience.scss
+++ b/styles/experience.scss
@@ -1,277 +1,300 @@
-.experience.active{
-    h1{
-        color: $purple; 
-    }
-    h2{
-        color: $light;    
-    }
-    .experience-cards-citation{
-        color: $gray-white;
-    }
-    .form-web span{
-        color: $white;
-    }
+.experience.active {
+  h1 {
+    color: $purple;
+  }
+  h2 {
+    color: $light;
+  }
+  .experience-cards-citation {
+    color: $gray-white;
+  }
+  .form-web span {
+    color: $white;
+  }
 }
-.experience{
+.experience {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-bottom: 5rem;
+  &-cards {
+    width: 70%;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
-    margin-bottom: 5rem;
-    &-cards{
-        width: 70%;
+    align-items: center;
+    flex-direction: column;
+    &-citation {
+      position: relative;
+      font-family: "Birthstone", cursive;
+      font-size: 35px;
+      color: $default;
+      margin-bottom: 3rem;
+      //font-weight: bold;
+      text-align: center;
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 2px;
+        background: rgba($default, $alpha: 0.5);
+      }
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background: rgba($default, $alpha: 0.5);
+      }
+    }
+    &-title {
+      h1.active {
+        color: $purple;
+      }
+      h1 {
+        text-align: center;
+        color: $gray-dark;
+        font-family: "Ubuntu";
+        font-size: 35px;
+        font-weight: 500;
+        margin-bottom: 2rem;
+      }
+      h2.active {
+        color: $light;
+      }
+      h2 {
+        text-align: center;
+        color: $default;
+        font-family: "Roboto";
+        font-weight: 500;
+        margin-bottom: 3rem;
+      }
+    }
+    &-container {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      width: 100%;
+      &-card.active {
+        background: $gray-dark;
+        box-shadow: 0 2px 10px rgba($white, $alpha: 0.5);
+      }
+      &-card {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        &-citation{
-            position: relative;
-            font-family: 'Birthstone', cursive;
-            font-size: 35px;
-            color: $default;
-            margin-bottom: 3rem;
-            //font-weight: bold;
-            text-align: center;
-            &::before{
-                content: '';
-                position: absolute;
-                top: 0;
-                width: 100%;
-                height: 2px;
-                background: rgba($default, $alpha: 0.5);
-            }
-            &::after{
-                content: '';
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                width: 100%;
-                height: 2px;
-                background: rgba($default, $alpha: 0.5);
-            }
+        width: 45%;
+        margin: 1rem;
+        border-radius: 3px;
+        overflow: hidden;
+        box-shadow: 0 2px 10px rgba($dark, $alpha: 0.2);
+        transition: transform 0.3s ease;
+        ion-icon {
+          font-size: 35px;
+          padding: 0.5rem;
+          border-radius: 50%;
+          border: 2px solid $gray;
         }
-        &-title{
-            h1.active{
-                color: $purple; 
-            }
-            h1{
-                text-align: center;
-                color: $gray-dark;
-                font-family: 'Ubuntu';
-                font-size: 35px;
-                font-weight: 500;
-                margin-bottom: 2rem;
-            }
-            h2.active{
-                color: $light;    
-            }
-            h2{
-                text-align: center;  
-                color: $default; 
-                font-family: 'Roboto';
-                font-weight: 500;
-                margin-bottom: 3rem;
-            }
+        p {
+          margin: 1rem;
         }
-        &-container{
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            width: 100%;
-            &-card.active{
-                background: $gray-dark;
-                box-shadow: 0 2px 10px rgba($white, $alpha: 0.5);
-            }
-            &-card{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-                width: 45%;
-                margin: 1rem;
-                border-radius: 3px;
-                overflow: hidden;
-                box-shadow: 0 2px 10px rgba($dark, $alpha: 0.2);
-                transition: transform .3s ease;
-                ion-icon{
-                    font-size: 35px;
-                    padding: 0.5rem;
-                    border-radius: 50%;
-                    border: 2px solid $gray;
-                }
-                p{
-                    margin: 1rem;
-                }
-                div{
-                    margin: 1rem;
-                    text-align: center;
-                }
-            }
+        div {
+          margin: 1rem;
+          text-align: center;
         }
-        &-github{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            margin: 1rem;
-            p{
-                text-align: center;
-                padding: 0.5rem;
-            }
-            button{
-                width: 100%;
-                padding: 1rem;
-                border: none;
-                border-radius: 10px;
-                background: $primary;
-                cursor: pointer;
-                color: $white;
-                transition: 1.5s ease;
-                &:hover{
-                    -webkit-animation: button 1.5s alternate both;
-                            animation: button 1.5s alternate both;
-                    opacity: 0.8;
-                }
-            }
-            @-webkit-keyframes button {
-                0%{
-                    transform: translateX(0);
-                }
-                12%{
-                    transform: translateX(5px);
-                }
-                33%{
-                    transform: translateX(-5px);
-                }
-                44%{
-                    transform: scale(1.1);
-                }
-                54%{
-                    transform: scale(1);
-                }
-                66%{
-                    transform: translateX(-5px);
-                }
-                78%{
-                    transform: translateX(5px);
-                }
-                100%{
-                    transform: translateX(0px);
-                }
-            }
-            @keyframes button {
-                0%{
-                    transform: translateX(0);
-                }
-                12%{
-                    transform: translateX(5px);
-                }
-                33%{
-                    transform: translateX(-5px);
-                }
-                44%{
-                    transform: scale(1.1);
-                }
-                54%{
-                    transform: scale(1);
-                }
-                66%{
-                    transform: translateX(-5px);
-                }
-                78%{
-                    transform: translateX(5px);
-                }
-                100%{
-                    transform: translateX(0px);
-                }
-            }
-        }
-        &-formation-web{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            margin: 1rem;
-            p{
-                text-align: center;
-                padding: 0.5rem;
-            }
-            .form-web{
-                position: relative;
-                height: 300px;
-                width: calc(300px * 1.7793594306);
-                margin-bottom: 1.5rem;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-                img{
-                    height: 100%;
-                    width: 100%;
-                    transition: opacity .3s ease;
-                    border-radius: 10px;
-                }
-                span{
-                    position: absolute;
-                    transform: translateY(150px);
-                    color: $gray-dark;
-                    font-weight: bold;
-                    text-align: center;
-                    opacity: 0;
-                    font-size: 20px;
-                    transition: .3s;
-                }
-                &:hover img{
-                    opacity: 0.08;
-                }
-                &:hover span{
-                    transform: translateY(0px);
-                    opacity: 1;
-                }
-            }
-        }
-        &-project{
-            width: 100%;
-        }
+      }
     }
+    &-github {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      margin: 1rem;
+      p {
+        text-align: center;
+        padding: 0.5rem;
+      }
+      button {
+        width: 100%;
+        padding: 1rem;
+        border: none;
+        border-radius: 10px;
+        background: $primary;
+        cursor: pointer;
+        color: $white;
+        transition: 1.5s ease;
+        &:hover {
+          -webkit-animation: button 1.5s alternate both;
+          animation: button 1.5s alternate both;
+          opacity: 0.8;
+        }
+      }
+      @-webkit-keyframes button {
+        0% {
+          transform: translateX(0);
+        }
+        12% {
+          transform: translateX(5px);
+        }
+        33% {
+          transform: translateX(-5px);
+        }
+        44% {
+          transform: scale(1.1);
+        }
+        54% {
+          transform: scale(1);
+        }
+        66% {
+          transform: translateX(-5px);
+        }
+        78% {
+          transform: translateX(5px);
+        }
+        100% {
+          transform: translateX(0px);
+        }
+      }
+      @keyframes button {
+        0% {
+          transform: translateX(0);
+        }
+        12% {
+          transform: translateX(5px);
+        }
+        33% {
+          transform: translateX(-5px);
+        }
+        44% {
+          transform: scale(1.1);
+        }
+        54% {
+          transform: scale(1);
+        }
+        66% {
+          transform: translateX(-5px);
+        }
+        78% {
+          transform: translateX(5px);
+        }
+        100% {
+          transform: translateX(0px);
+        }
+      }
+    }
+    &-formation-web {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      margin: 1rem;
+      p {
+        text-align: center;
+        padding: 0.5rem;
+      }
+      .form-web {
+        position: relative;
+        height: 300px;
+        width: calc(300px * 1.7793594306);
+        margin-bottom: 1.5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        img {
+          height: 100%;
+          width: 100%;
+          transition: opacity 0.3s ease;
+          border-radius: 10px;
+        }
+        span {
+          position: absolute;
+          transform: translateY(150px);
+          color: $gray-dark;
+          font-weight: bold;
+          text-align: center;
+          opacity: 0;
+          font-size: 20px;
+          transition: 0.3s;
+        }
+        &:hover img {
+          opacity: 0.08;
+        }
+        &:hover span {
+          transform: translateY(0px);
+          opacity: 1;
+        }
+      }
+    }
+    &-project {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+    //   overflow-x: scroll;
+      a {
+        margin: 0.5rem;
+        img {
+          width: 500px;
+          height: auto;
+          object-fit: cover;
+        }
+      }
+    }
+    // &-project::-webkit-scrollbar {
+    //   background: none;
+    //   width: 5px;
+    //   height: 3px;
+    // }
+
+    // &-project::-webkit-scrollbar-thumb {
+    //   background: $purple;
+    //   border-radius: 10px;
+    // }
+  }
 }
 
 @media screen and (max-width: 1165px) {
-    .experience{
-        &-cards{
-            &-container{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-                flex-wrap: nowrap;
-                &-card{
-                    width: 90%;
-                }
-            }
+  .experience {
+    &-cards {
+      &-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        &-card {
+          width: 90%;
         }
+      }
     }
+  }
 }
 
 @media screen and (max-width: 650px) {
-    .experience{
-        &-cards{
-            width: 90%;
-            margin: 0.5rem;
-        }
+  .experience {
+    &-cards {
+      width: 90%;
+      margin: 0.5rem;
     }
+  }
 }
 
 @media screen and (max-width: 650px) {
-    .experience{
-        &-cards{
-            .form-web{
-                height: calc(100% / 1.77777777778);
-                width: 100%;
-                img{
-                    height: 100%;
-                    width: 100%;
-                }
-            }
+  .experience {
+    &-cards {
+      .form-web {
+        height: calc(100% / 1.77777777778);
+        width: 100%;
+        img {
+          height: 100%;
+          width: 100%;
         }
+      }
     }
+  }
 }
