--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -49,6 +49,7 @@ img{
 body{
     background-color: $white;
     transition: background-color .3s ease;
+    overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
