--- a/styles/buttonFixe.scss
+++ b/styles/buttonFixe.scss
@@ -1,76 +1,131 @@
-.toggle-mode{
-    position: fixed;
-    bottom: 15px;
-    right: 15px;
-    display: flex;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background: $gray-dark;
-    border: 2px solid $primary;
-    box-shadow: 0 2px 10px rgba($default, $alpha: 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    transition: .5s;
-    &:hover{
-        opacity: 0.8;
-    }
-    & ion-icon{
-        font-size: 1.5em;
-        color: $primary;
-    }
-    & ion-icon:nth-child(2){
-        display: none;
-    }
-    &.active{
-        background: $white;
-        border: 2px solid $success;
-        box-shadow: 0 2px 10px rgba($success, $alpha: 0.5);
-    }
-    &.active ion-icon:nth-child(2){
-        display: block;
-        color: $success;
-    }
-    &.active ion-icon:nth-child(1){
-        display: none;
-    }
-}
-
-.arrow{
-    position: fixed;
+.toggle-mode {
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  display: flex;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: $gray-dark;
+  border: 2px solid $primary;
+  box-shadow: 0 2px 10px rgba($default, $alpha: 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.5s;
+  &:hover {
+    opacity: 0.8;
+  }
+  & ion-icon {
+    font-size: 1.5em;
+    color: $primary;
+  }
+  & ion-icon:nth-child(2) {
     display: none;
-    bottom: 60px;
-    right: 15px;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+  }
+  &.active {
     background: $white;
-    border: 2px solid $cyan;
-    box-shadow: 0 2px 10px rgba($cyan, $alpha: 0.5);
+    border: 2px solid $success;
+    box-shadow: 0 2px 10px rgba($success, $alpha: 0.5);
+  }
+  &.active ion-icon:nth-child(2) {
+    display: block;
+    color: $success;
+  }
+  &.active ion-icon:nth-child(1) {
+    display: none;
+  }
+}
+
+.arrow {
+  position: fixed;
+  display: none;
+  bottom: 60px;
+  right: 15px;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: $white;
+  border: 2px solid $cyan;
+  box-shadow: 0 2px 10px rgba($cyan, $alpha: 0.5);
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  opacity: 0;
+  ion-icon {
+    color: $cyan;
+  }
+}
+
+.arrow.active {
+  border: 2px solid $primary;
+  background: $gray-dark;
+  box-shadow: 0 2px 10px rgba($default, $alpha: 0.5);
+  & ion-icon {
+    color: $primary;
+  }
+}
+
+.arrow.arrow-hidde {
+  transition: opacity 0.5s;
+  display: flex !important;
+  opacity: 1 !important;
+}
+
+.don {
+  position: fixed;
+  bottom: 15px;
+  left: 15px;
+  display: flex;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: $white;
+  border: 2px solid $warning;
+  box-shadow: 0 2px 10px rgba($warning, $alpha: 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.5s;
+  a {
+    position: relative;
+    display: flex;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
-    opacity: 0;
-    ion-icon{
-        color: $cyan;
+    img {
+      width: 45px;
+      height: 45px;
+      border-radius: 50%;
     }
-}
-
-.arrow.active{
-    border: 2px solid $primary;
-    background: $gray-dark;
-    box-shadow: 0 2px 10px rgba($default, $alpha: 0.5);
-    & ion-icon{
-        color: $primary;
+    &::before {
+      content: "ME FAIRE UN DON";
+      position: absolute;
+      width: 150px;
+      border-radius: 4px;
+      text-align: center;
+      background: $white;
+      font-weight: bold;
+      box-shadow: 2px 2px 5px rgba($default, $alpha: 0.1),
+        -2px -2px 5px rgba($default, $alpha: 0.1);
+      top: -30px;
+      left: 0;
+      transform: translateY(10px);
+      opacity: 0;
+      transition: 0.3s ease;
     }
-}
-
-.arrow.arrow-hidde{
-    transition: opacity .5s;
-    display: flex!important;
-    opacity: 1!important;
+  }
+  &:hover {
+    opacity: 0.8;
+    a {
+      &::before {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+  }
 }
