ajout de la box pour soutenir

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,6 @@
 @import 'settings';
 @import 'loader';
-@import 'buttonFixe';
+@import 'elementFixe';
 @import 'navigation';
 @import 'header';
 @import 'about';
