--- a/styles/elementFixe.scss
+++ b/styles/elementFixe.scss
@@ -1,3 +1,83 @@
+#modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 8;
+  backdrop-filter: blur(10px);
+  transition: transform 0.3s ease-in-out;
+}
+#modal.active {
+  display: flex;
+}
+
+.card-don {
+  margin: 0 0.5rem;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  max-width: 500px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 2px 2px 25px #00000033;
+  .don-close {
+    position: absolute;
+    color: red;
+    top: 0;
+    right: 0;
+    font-size: 30px;
+    cursor: pointer;
+  }
+  svg{
+    width: 50px;
+    height: 50px;
+    border: 2px solid $purple;
+    border-radius: 50%;
+    padding: 0.5rem;
+  }
+  h2{
+    text-align: center;
+    font-family: 'Parisienne', cursive;
+    font-size: 30px;
+    color: $gray-dark;
+    margin: 0.5rem 0;
+  }
+  h3{
+    margin-top: 1rem;
+  }
+  ul{
+    margin-left: 1rem;
+    li{
+      text-align: left;
+      .don-paypal{
+        color: $primary;
+        &:hover{
+          text-decoration: underline;
+        }
+      }
+      .don-patreon{
+        color: $warning;
+        &:hover{
+          text-decoration: underline;
+        }
+      }
+      .don-youtube{
+        color: $danger;
+        &:hover{
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+}
+
 .toggle-mode {
   position: fixed;
   bottom: 15px;
@@ -15,6 +95,7 @@
   align-items: center;
   cursor: pointer;
   transition: 0.5s;
+  z-index: 10;
   &:hover {
     opacity: 0.8;
   }
@@ -81,10 +162,10 @@
   left: 15px;
   display: flex;
   align-items: center;
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
-  background: $white;
+  background: $gray-dark;
   border: 2px solid $warning;
   box-shadow: 0 2px 10px rgba($warning, $alpha: 0.5);
   display: flex;
@@ -92,7 +173,7 @@
   align-items: center;
   cursor: pointer;
   transition: 0.5s;
-  a {
+  div {
     position: relative;
     display: flex;
     justify-content: center;
@@ -103,25 +184,35 @@
       border-radius: 50%;
     }
     &::before {
-      content: "ME FAIRE UN DON";
+      content: "SOUTENEZ MOI";
       position: absolute;
       width: 150px;
+      height: 100%;
       border-radius: 4px;
       text-align: center;
-      background: $white;
+      background: $gray-dark;
+      color: $warning;
       font-weight: bold;
       box-shadow: 2px 2px 5px rgba($default, $alpha: 0.1),
         -2px -2px 5px rgba($default, $alpha: 0.1);
-      top: -30px;
-      left: 0;
+      top: 0;
+      left: 40px;
       transform: translateY(10px);
       opacity: 0;
       transition: 0.3s ease;
     }
   }
+  &.active {
+    background: $white;
+    div {
+      &::before {
+        background: $white;
+      }
+    }
+  }
   &:hover {
     opacity: 0.8;
-    a {
+    div {
       &::before {
         transform: translateY(0);
         opacity: 1;
