--- a/styles/other.scss
+++ b/styles/other.scss
@@ -2,28 +2,33 @@
   h1 {
     color: $purple;
   }
+
   h2 {
     color: $light;
   }
+
   .oc-cert {
     span {
       color: $white;
     }
   }
 }
+
 .other {
   display: flex;
   justify-content: center;
   align-items: flex-start;
   min-height: 100vh;
   margin-bottom: 5rem;
+
   &-container {
-    width: 70%;
+    width: 75%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     margin: 1rem;
+
     h1 {
       text-align: center;
       color: $gray-dark;
@@ -31,76 +36,99 @@
       font-size: 35px;
       font-weight: 500;
     }
+
     h2 {
       text-align: center;
       color: $default;
       font-family: "Roboto";
       font-weight: 500;
+
       i {
         font-size: 18px;
       }
     }
+
     &-certification {
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
+
       h1 {
         margin-bottom: 2rem;
       }
+
       h2 {
         margin-bottom: 3rem;
       }
-      .oc-cert {
-        position: relative;
-        height: 300px;
-        width: calc(300px * 1.7793594306);
-        margin-bottom: 1.5rem;
+
+      .cert {
+        width: 100%;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
-        flex-direction: column;
-        img {
-          height: 100%;
-          width: 100%;
-          transition: opacity 0.3s ease;
-          border-radius: 10px;
-        }
-        span {
-          position: absolute;
-          transform: translateY(150px);
-          color: $gray-dark;
-          font-weight: bold;
-          text-align: center;
-          opacity: 0;
-          font-size: 20px;
-          transition: 0.3s;
-        }
-        &:hover img {
-          opacity: 0.08;
+        flex-wrap: wrap;
+        margin-bottom: 2.5rem;
+
+        a {
+          position: relative;
+          width: 48%;
+          padding: 5px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+
+          img {
+            height: 100%;
+            width: 100%;
+            transition: opacity 0.3s ease;
+            border-radius: 10px;
+          }
+
+          span {
+            position: absolute;
+            transform: translateY(150px);
+            color: $gray-dark;
+            font-weight: bold;
+            text-align: center;
+            opacity: 0;
+            font-size: 20px;
+            transition: 0.3s;
+          }
+
+          &:hover img {
+            opacity: 0.08;
+          }
         }
       }
+
       a:hover span {
         transform: translateY(0px);
         opacity: 1;
       }
     }
+
     &-contact {
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
+
       h1 {
         margin-bottom: 1.5rem;
       }
+
       h2 {
         margin-bottom: 1.5rem;
       }
+
       div {
         display: flex;
         justify-content: center;
         align-items: center;
         margin-bottom: 2rem;
+
         a {
           button {
             border-radius: 10px;
@@ -111,17 +139,20 @@
             color: $indigo;
             font-weight: bold;
             cursor: pointer;
+
             &:hover {
               background: rgba($color: $indigo, $alpha: 0.05);
             }
           }
         }
       }
+
       .other-freelance {
         a {
           width: 53px;
           height: 53px;
           margin: 0 1rem;
+
           img {
             width: 100%;
             height: 100%;
@@ -129,12 +160,14 @@
             object-fit: cover;
           }
         }
-        a:first-child{
-            width: 60px;
-            height: 60px;
+
+        a:first-child {
+          width: 60px;
+          height: 60px;
         }
       }
     }
+
     &-cv {
       position: relative;
       width: 100%;
@@ -144,9 +177,11 @@
       color: $white;
       background: $primary;
       transition: transform 0.3s ease;
+
       &:hover {
         transform: translateY(5px);
       }
+
       &::before {
         content: "•";
         position: absolute;
@@ -156,28 +191,35 @@
         left: 5px;
         transition: transform 0.3s ease;
       }
+
       &:hover::before {
         -webkit-animation: hover_cv 0.3s infinite;
         animation: hover_cv 0.3s infinite;
       }
+
       @-webkit-keyframes hover_cv {
         0% {
           transform: translateY(0);
         }
+
         50% {
           transform: translateY(-10px);
         }
+
         100% {
           transform: translateY(10px);
         }
       }
+
       @keyframes hover_cv {
         0% {
           transform: translateY(0);
         }
+
         50% {
           transform: translateY(-10px);
         }
+
         100% {
           transform: translateY(10px);
         }
@@ -186,17 +228,36 @@
   }
 }
 
-@media screen and (max-width: 650px) {
+
+@media screen and (max-width: 850px) {
   .other {
     &-container {
       width: 90%;
+
+      &-certification {
+        .cert {
+          flex-direction: column;
+
+          a {
+            width: 70%;
+          }
+        }
+      }
     }
-    .oc-cert {
-      height: calc(100% / 1.7793594306);
-      width: 100%;
-      img {
-        height: 100%;
-        width: 100%;
+
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .other {
+
+    &-container {
+      &-certification {
+        .cert {
+          a {
+            width: 95%;
+          }
+        }
       }
     }
   }
