centrer le p sur les skills card

--- a/styles/skillest.scss
+++ b/styles/skillest.scss
@@ -94,6 +94,7 @@
                 }
                 p {
                     margin: 1rem;
+                    text-align: center;
                 }
                 div {
                     margin: 1rem;
